--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Wars</title>
     <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Handlee&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="app">
@@ -20,8 +24,12 @@
             <div class="item" v-for="item of characters">
                 <img :src="item.avatar" :alt="item.nome"/>
                 <p>{{item.nome}}</p>
-                <button @click="like(item.nome)">Like</button>
-                <button @click="remove(item.id)">Remover</button>
+                <span @click="like(item.nome)" class="like material-symbols-outlined">
+                    favorite
+                    </span>
+                <span @click="remove(item.id)" class="delete material-symbols-outlined">
+                    delete
+                    </span>
             </div>
         </div>
 
